@@ -28,6 +28,20 @@ public class PluginUtils {
         if (Bukkit.getPluginManager().getPlugin(name) == null)
             return;
         callback.accept(null);
-        MMOItems.plugin.getLogger().log(Level.INFO, "Hooked onto %s".formatted(name));
+        MMOItems.plugin.getLogger().log(Level.INFO, String.format("Hooked onto %s", name));
     }
+
+    public static String capitalize(@NotNull String text) {
+        if (text.length() == 0)
+            return text;
+        return text.substring(0, 1).toUpperCase() + text.substring(1);
+    }
+
+    public static String capitalizeAllWorlds(@NotNull String text) {
+        StringBuilder builder = new StringBuilder();
+        for (String word : text.split(" "))
+            builder.append(capitalize(word)).append(" ");
+        return builder.toString().trim();
+    }
+
 }
